--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "dev": "bun run --watch --preload ./src/lib/sentry.ts src/index.ts",
     "start": "bun run --preload ./src/lib/sentry.ts src/index.ts",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint --write ./src",
     "format": "biome format ./src",
@@ -21,7 +24,9 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
     "@types/bun": "latest",
-    "drizzle-kit": "^0.31.7"
+    "@vitest/coverage-v8": "^4.0.15",
+    "drizzle-kit": "^0.31.7",
+    "vitest": "^4.0.15"
   },
   "peerDependencies": {
     "typescript": "^5.9.3"
